fix(ci): Download all artifacts to the wheels directory

--- a/.github/workflows/concrete_python_release.yml
+++ b/.github/workflows/concrete_python_release.yml
@@ -196,6 +196,7 @@ jobs:
       - uses: actions/download-artifact@v4
         with:
           path: wheels
+          merge-multiple: true
 
       - name: Push wheels to internal PyPI (nightly)
         if: ${{ env.RELEASE_TYPE == 'nightly' }}
