--- a/compilers/concrete-compiler/compiler/tests/end_to_end_tests/CMakeLists.txt
+++ b/compilers/concrete-compiler/compiler/tests/end_to_end_tests/CMakeLists.txt
@@ -12,7 +12,7 @@ include_directories(${CONCRETE_OPTIMIZER_DIR}/concrete-optimizer-cpp/src/cpp)
 
 if(NOT ${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
   link_libraries(
-    # usefull for old gcc versions
+    # useful for old gcc versions
     -Wl,--allow-multiple-definition # static concrete-optimizer and concrete shares some code
   )
 endif()
