--- a/compilers/concrete-compiler/compiler/tests/unit_tests/concretelang/Encodings/CMakeLists.txt
+++ b/compilers/concrete-compiler/compiler/tests/unit_tests/concretelang/Encodings/CMakeLists.txt
@@ -11,7 +11,7 @@ endfunction()
 
 if(NOT ${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
   link_libraries(
-    # usefull for old gcc versions
+    # useful for old gcc versions
     -Wl,--allow-multiple-definition # static concrete-optimizer and concrete shares some code
   )
 endif()
