--- a/.github/workflows/compiler_build_and_test_cpu_distributed.yml
+++ b/.github/workflows/compiler_build_and_test_cpu_distributed.yml
@@ -42,7 +42,7 @@ jobs:
 
       - name: Instance cleanup
         run: |
-          sudo rm -rf /home/ubuntu/actions-runner/_work/concrete/concrete/*
+          sudo rm -rf /home/ubuntu/actions-runner/_work/concrete/concrete
           docker system prune -af
 
       - name: Fetch repository
