feat(compiler): Expose public key encryption API to python bindings

--- a/compilers/concrete-compiler/compiler/lib/Bindings/Python/CMakeLists.txt
+++ b/compilers/concrete-compiler/compiler/lib/Bindings/Python/CMakeLists.txt
@@ -47,6 +47,7 @@ declare_mlir_python_sources(
   concrete/compiler/library_support.py
   concrete/compiler/library_lambda.py
   concrete/compiler/parameter.py
+  concrete/compiler/public_key_set.py
   concrete/compiler/public_arguments.py
   concrete/compiler/public_result.py
   concrete/compiler/server_circuit.py
