--- a/.github/workflows/concrete_python_release.yml
+++ b/.github/workflows/concrete_python_release.yml
@@ -201,6 +201,7 @@ jobs:
           merge-multiple: true
 
       - name: Push wheels to internal PyPI (nightly)
+        continue-on-error: true
         if: ${{ env.RELEASE_TYPE == 'nightly' }}
         run: |
           pip install twine==4.0.2
@@ -210,6 +211,7 @@ jobs:
             --repository-url "${{ secrets.INTERNAL_PYPI_URL }}"
 
       - name: Push wheels to public PyPI (public)
+        continue-on-error: true
         if: ${{ env.RELEASE_TYPE == 'public' }}
         run: |
           pip install twine==4.0.2
@@ -219,6 +221,7 @@ jobs:
             -r pypi
 
       - name: Upload wheels to S3
+        continue-on-error: true
         if: ${{ env.RELEASE_TYPE == 'public' }}
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_IAM_ID }}
