--- a/.github/workflows/concrete_python_release.yml
+++ b/.github/workflows/concrete_python_release.yml
@@ -86,6 +86,8 @@ jobs:
             ${{ env.DOCKER_GPU_OPTION }}
           shell: bash
           run: |
+            set -e
+
             rustup toolchain install nightly-2024-01-31
             rm -rf /build/*
             
