--- a/frontends/concrete-python/mypy.ini
+++ b/frontends/concrete-python/mypy.ini
@@ -2,3 +2,4 @@
 plugins = numpy.typing.mypy_plugin
 disable_error_code = annotation-unchecked
 allow_redefinition = True
+exclude = test_dynamic_indexing\.py
