docs(frontend): adding a SHA1 tutorial with modules

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,6 @@ compilers/concrete-compiler/compiler/hpx*
 
 # For tests within ML
 tmp_directory_for_cml_tests
+
+# Temp file
+frontends/concrete-python/examples/sha1/tmp_sha1_test_file.txt
