--- a/.github/workflows/concrete_python_release.yml
+++ b/.github/workflows/concrete_python_release.yml
@@ -202,19 +202,8 @@ jobs:
           path: wheels
           merge-multiple: true
 
-      - name: Push wheels to internal PyPI (nightly)
-        continue-on-error: true
-        if: ${{ env.RELEASE_TYPE == 'nightly' }}
-        run: |
-          pip install twine==4.0.2
-          twine upload wheels/*.whl \
-            -u "${{ secrets.INTERNAL_PYPI_USER }}" \
-            -p "${{ secrets.INTERNAL_PYPI_PASSWORD }}" \
-            --repository-url "${{ secrets.INTERNAL_PYPI_URL }}"
-
       - name: Upload wheels to S3
-        continue-on-error: true
-        if: ${{ env.RELEASE_TYPE == 'public' }}
+        if: ${{ env.RELEASE_TYPE == 'public' || env.RELEASE_TYPE == 'nightly' }}
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_IAM_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_IAM_KEY }}
